--- a/web/doc/如何开始开发.md
+++ b/web/doc/如何开始开发.md
@@ -1,1 +1,24 @@
-TODO
+# 如何开始开发
+
+## 依赖
+
+- [Node.js](https://nodejs.org/en)
+  开发服务器的Runtime
+- [Bun](https://bun.sh/)
+  用作包管理器
+- [Just](https://github.com/casey/just)
+  用于运行项目脚本的工具
+
+## 配置
+
+### Env
+
+`VITE_SERVER_URL`: **必填**。远程服务器地址，用于生成常量与 OpenAPI 架构。
+
+## I18n
+
+我们使用[Lingui](https://lingui.dev/)实现i18n。
+
+在标记可翻译文本时，请优先使用 `Trans` 组件，而非 `t` 函数。
+
+新增翻译内容后，请在代码提交前运行 `just i18n`，确保更新后的翻译文件被一并提交。
