Replace bun with pnpm (#198)

--- a/web/doc/如何开始开发.md
+++ b/web/doc/如何开始开发.md
@@ -4,7 +4,7 @@
 
 - [Node.js](https://nodejs.org/en)
   开发服务器的Runtime
-- [Bun](https://bun.sh/)
+- [Pnpm](https://pnpm.io)
   用作包管理器
 - [Just](https://github.com/casey/just)
   用于运行项目脚本的工具
