Add entity exploration pages (#299)
Co-authored-by: Horace Liu <im.liuhq@gmail.com>

--- a/web/doc/如何开始开发.md
+++ b/web/doc/如何开始开发.md
@@ -15,6 +15,14 @@
 
 `VITE_SERVER_URL`: **必填**。远程服务器地址，用于生成常量与 OpenAPI 架构。
 
+### 生成 API
+
+OpenAPI schema 默认使用 `$VITE_SERVER_URL/openapi.json`，也可以通过 `API_SCHEMA` 覆盖：
+
+```bash
+just gen-api
+```
+
 ## I18n
 
 我们使用[Lingui](https://lingui.dev/)实现i18n。
